# smart-hosting

./: .pre-commit-config.yaml  README.md  pyproject.toml
smart_hosting/: main.py
